// Copyright (C) 2023 The Qt Company Ltd.
// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
syntax = "proto3";

import "google/protobuf/timestamp.proto";

package qtproto.tests;

message TimestampMessage {
    google.protobuf.Timestamp field = 1;
}
